FEATURE: Partial support for Read-Only data (for seeding) [TuxPaper]
FEATURE: Added "Forced-Start" to force a torrent to start, ignoring download limits or seeding rules [TuxPaper]
FEATURE: Auto-positioning of finished torrent based on how badly the torrent needs seeding [TuxPaper]
FEATURE: Added SavePath, Max # Uploads, and Total Speed columns to My Torrents view [TuxPaper]

CHANGE: Replaced "Max Active Torrents" with "Max Seeding While DLing" and "Max Seeding No DLing" [TuxPaper]
CHANGE: Split torrents in My Torrents view into 2 lists: Downloading and Seeding (Completed) [TuxPaper]
CHANGE: STOPPED status now means the torrent never auto-starts [TuxPaper]
CHANGE: Moved icon from Rank column to Name column [TuxPaper]
CHANGE: Removed Lock Priority.  No longer an issue since priority only gets autochanged once [TuxPaper]
CHANGE: Remove "Lock Start/Stop" menu option.  Stop now means no auto-starting/stopping [TuxPaper]
CHANGE: Re-design of Configuration view [TuxPaper]

BUGFIX: Once a torrent is complete, and you remove the data, it wil no longer start downloading again when seeding rules are on [TuxPaper]



02.02.04 | Azureus 2.0.7.0

FEATURE: Under Linux + GTK, added an option to setup a vertical offset to re-align graphics [Gudy]
FEATURE: SSL tracker client now gives option to import certificate rather than manually doing so via "keytool" [Parg]
FEATURE: Start All Downloads option on tray icon [Nolar]
FEATURE: Support for trackers that do not return peerIDs on announce [Parg]
FEATURE: Sharing - allows files/dirs/dir contents (recursive) to automatically have torrents created for them and torrents hosted
		 The shared resources will automatically have their torrents recalculated if they change (over Azureus restart) [Parg]
FEATURE: Tracker allows number of peers returned to be limited [Parg]